--- a/index.html
+++ b/index.html
@@ -6,8 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Awesome website</title>
+    <style>
+        .link-text { color: #E5E7EB; font-size: 18px; }
+
+        .header-logo { font-size: 24px; color: #F9FAF8; font-weight: bolder; }
+
+        ul { font-size: 18px; }
+
+        img { height:200px ; width: 200px; flex-shrink: 0; flex-grow: 0;}
+
+        .hero-text { font-size: 48px; color: #F9FAF8; font-weight: 900; }
+
+        .sidekick-text { font-size: 18px; color: #E5E7EB; }
+    </style>
 </head>
 <body>
-    
+    <div class="header">
+        <p class="header-logo">Header Logo</p>
+        <ul>
+            <li><a class="link-text" href="">header link one</a></li>
+            <li><a class="link-text" href="">header link two</a></li>
+            <li><a class="link-text" href="">header link three</a></li>
+        </ul>
+    </div>
+    <div class="body">
+        <!-- Panels Section -->
+
+
+        <div class="panel-a">
+            <div class="sub-panel">
+                <div class="hero-text">This website is awesome</div>
+                <div class="sidekick-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
+            <img src="https://gifdb.com/images/high/pixel-cute-dog-dancing-rzqg0lo7zf49xatl.gif" alt="a dancing dog">
+        </div>
+        <div class="panel-b">
+            <div class="panel-b-text">Some random information.</div>
+            <div class="box-container">
+                <div class="boxes"></div>
+                <div class="boxes"></div>
+                <div class="boxes"></div>
+                <div class="boxes"></div>
+            </div>
+            <div class="text-container">
+                <p class="text">this is some subtext under an illustration or image</p>
+                <p class="text">this is some subtext under an illustration or image</p>
+                <p class="text">this is some subtext under an illustration or image</p>
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+        <div class="panel-c">
+            <p class="text" style="font-size: 36px; font-style: italic; font-weight: lighter; width: 460px; height: 250px;">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually red it. Who knows? All I know is that it looks nice.</p>
+            <p class="text" style="margin-top: -62px; margin-left: 290px; font-weight: bold;">-Thor, God of Thunder</p>
+        </div>
+        <div class="panel-d">
+            <div class="sub-panel">
+                <div class="text-container">
+                    <div style="color:#F9FAF8; font-weight: bolder; font-size: 20px;">Call to action! It's time!</div>
+                    <div style="color: #E5E7EB">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+        
+
+    </div>
+    <div class="footer">
+        Copyright &copy; The Odin Project 2021
+    </div>
 </body>
 </html>
